                     CHANGES version 5.13

           This file summarizes changes made since 5.0

Version 5.13

Fixed: Issue #154: Upstart script should stop monit early when the system stops [Linux]

Fixed: Issue #155: Monit may crash if the system hostname resolving failed.


Version 5.12

New: Support for testing IPv6 hosts with ping and TCP/UDP connections. Example:
    check host myhost with address "2001:db8::1234"
        if failed ping then alert
        if failed port 80 then alert
IPv6 is supported also for mailserver and M/Monit with IPv6-enabled.
Monit HTTP interface listens still on IPv4 only.

New: Support for Monit HTTP interface on unix socket for easier deployment on
virtualisation platforms which share the IP address for containers, such as Docker.
Note: Either unixsocket or TCP port can be used - not both at once. Example:
    set httpd
        unixsocket /var/run/monit.sock
        allow myuser:mypassword

New: Support for multiple existence tests (available in the process, file, directory
and fifo check context):
    if does not exist then alert
    if does not exist 3 times in 5 cycles then stop

New: Support for multiple fsflag tests (available in the filesystem check context):
    if changed fsflags then alert
    if changed fsflags for 10 cycles then exec "/usr/bin/myscript.sh"

New: Space usage test now tests the free blocks without accounting for reserved
blocks. Previously Monit computed the space usage by subtracting blocks free for
non-super user from the total blocks count, which showed the filesystem usage as
100% as soon as all non-reserved blocks were allocated, whereas there still may be
some free space available to root user (usually ~ 2-5%). The space test value
will now match the output of utilities like "df".

New: Space usage test events and status now presents the usage using byte-based unit
rather then blocks count.

New: Provide more details for HTTP request errors.
